@@ -27,8 +27,33 @@ function products_help($route_name, RouteMatchInterface $route_match) {
  * Implements hook_theme().
  */
 function products_theme() {
+  $path = drupal_get_path('module', 'products') . '/img/icon/cart.png';
   return [
     'products' => [
+      'render element' => 'children',
+    ],
+    'cart_block' => [
+      'variables' => [
+        'img' => [
+          'class' => [
+              'img-checkout-block',
+          ],
+          'src' => $path,
+          'alt' => 'Shopping cart',
+          'height' => '40px',
+          'width' => '40px',
+        ],
+        'button' => [
+          'class' => [
+              'button',
+              'buton-action',
+              'button--primary',
+              'button--small',
+          ],
+          'text' => 'Proceed to checkout',
+          'href' => 'products/cart',
+        ],
+      ],
       'render element' => 'children',
     ],
   ];
