@@ -13,3 +13,12 @@ products.cart_controller_checkout:
     _title: 'Checkout'
   requirements:
     _permission: 'access content'
+products.marketplace_config_form:
+  path: '/admin/config/marketplace'
+  defaults:
+    _form: '\Drupal\products\Form\MarketplaceConfigForm'
+    _title: 'Marketplace Configuration Form'
+  requirements:
+    _permission: 'access administration pages'
+  options:
+    _admin_route: TRUE
